Revert "projects carousel update"
This reverts commit b98d51ae6023849553aab1a76858eb3d30d4b687.

--- a/index.html
+++ b/index.html
@@ -115,8 +115,9 @@
           controls: true,
           nav: true,
           gutter: 16,
-          autoplayTimeout: 3000,
-          autoplayButton: false
+          autoplayTimeout: 4000,
+          autoplayButton: false,
+          controlsText: ['←', '→']
         });
       }
     </script>
