--- a/projects.html
+++ b/projects.html
@@ -60,7 +60,7 @@
 
 <section class="py-5">
   <div class="container">
-    <div class="rounded-4 border border-2 border-dashed border-secondary bg-light text-center py-5">
+    <div class="rounded-4 border-2 border-dashed border-secondary bg-light text-center py-5">
       <h4 class="h5 fw-semibold text-secondary mb-2">More Projects Coming Soon</h4>
       <p class="text-muted mb-0">Stay tuned for upcoming work.</p>
     </div>
