--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         white-space: nowrap;
         text-align: center;
       }
+
       @keyframes gradientShift {
         0% { background-position: 0% 50%; }
         50% { background-position: 100% 50%; }
@@ -41,51 +42,63 @@
         font-weight: 500;
         background: transparent;
       }
+
+      /* Carousel Controls */
       .tns-controls {
-      position: absolute;
-      width: 100%;
-      bottom: -2rem;
-      display: flex;
-      justify-content: space-between;
-      padding: 0 2rem;
-      z-index: 1;
-    }
-    .tns-controls button {
-      background-color: #fff;
-      border: 1px solid #ddd;
-      border-radius: 9999px;
-      padding: 0.5rem 1rem;
-      font-size: 1.5rem;
-      cursor: pointer;
-      box-shadow: 0 0.5rem 1rem rgba(0,0,0,0.05);
-      transition: background 0.3s ease;
-    }
-    .tns-controls button:hover {
-      background-color: #f0f0f0;
-    }
-    .tns-outer {
-  position: relative;
-}
+        position: absolute;
+        width: 100%;
+        bottom: -2rem;
+        display: flex;
+        justify-content: space-between;
+        padding: 0 2rem;
+        z-index: 1;
+      }
 
-.tns-slider {
-  transition-timing-function: ease-in-out !important;
-  transition-duration: 800ms !important;
-}
+      .tns-controls button {
+        background-color: #fff;
+        border: 1px solid #ddd;
+        border-radius: 9999px;
+        padding: 0.5rem 1rem;
+        font-size: 1.5rem;
+        cursor: pointer;
+        box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.05);
+        transition: background 0.3s ease;
+      }
 
-.my-slider .card {
-  height: 100%;
-  min-height: 100%;
-}
+      .tns-controls button:hover {
+        background-color: #f0f0f0;
+      }
 
-.carousel-prev,
-.carousel-next {
-  z-index: 10;
-  font-size: 1.5rem;
-  padding: 0.5rem 1rem;
-  border-radius: 9999px;
-}
+      .tns-outer {
+        position: relative;
+        padding: 0 1rem;
+      }
 
+      .tns-item {
+        display: flex;
+        justify-content: center;
+      }
+
+      .tns-slider {
+        transition-timing-function: ease-in-out !important;
+        transition-duration: 800ms !important;
+      }
+
+      .my-slider .card {
+        width: 100%;
+        height: 100%;
+        min-height: 100%;
+      }
+
+      .carousel-prev,
+      .carousel-next {
+        z-index: 10;
+        font-size: 1.5rem;
+        padding: 0.5rem 1rem;
+        border-radius: 9999px;
+      }
     </style>
+
   </head>
   <body class="bg-gray-100 text-gray-800 font-sans">
     <!-- Navbar -->
