--- a/index.html
+++ b/index.html
@@ -3,21 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="style.css" rel="stylesheet" />
+    <title>Tuna</title>
+
     <!-- Bubbly font -->
     <link href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&display=swap" rel="stylesheet" />
+
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+
     <!-- Tiny Slider CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.3/tiny-slider.css" />
-    <!-- Bootstrap + Mobirise theme -->
-    
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
-   
 
-    <title>Tuna</title>
     <style>
+      body {
+        background-color: #f8f9fa;
+        color: #212529;
+        font-family: sans-serif;
+      }
+
       #typewriter {
         font-family: 'Bubblegum Sans', cursive;
-        font-size: 16rem;
+        font-size: 5rem;
         background: linear-gradient(270deg, #FFC1CC, #B3E5FC, #FFDAB9);
         background-size: 600% 600%;
         background-clip: text;
@@ -34,7 +40,6 @@
         100% { background-position: 0% 50%; }
       }
 
-      /* Badge capsule style */
       .badge.tag-pill {
         border: 1px solid currentColor;
         border-radius: 9999px;
@@ -43,7 +48,28 @@
         background: transparent;
       }
 
-      /* Carousel Controls */
+      .tns-outer {
+        padding: 0 1rem;
+        position: relative;
+      }
+
+      .tns-item {
+        display: flex;
+        justify-content: center;
+      }
+
+      .my-slider .card {
+        max-width: 360px;
+        border-radius: 1rem;
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+        transition: transform 0.2s ease, box-shadow 0.2s ease;
+      }
+
+      .my-slider .card:hover {
+        transform: translateY(-4px);
+        box-shadow: 0 8px 20px rgba(0, 0, 0, 0.12);
+      }
+
       .tns-controls {
         position: absolute;
         width: 100%;
@@ -68,39 +94,10 @@
       .tns-controls button:hover {
         background-color: #f0f0f0;
       }
-
-      .tns-outer {
-        position: relative;
-        padding: 0 1rem;
-      }
-
-      .tns-item {
-        display: flex;
-        justify-content: center;
-      }
-
-      .tns-slider {
-        transition-timing-function: ease-in-out !important;
-        transition-duration: 800ms !important;
-      }
-
-      .my-slider .card {
-        width: 100%;
-        height: 100%;
-        min-height: 100%;
-      }
-
-      .carousel-prev,
-      .carousel-next {
-        z-index: 10;
-        font-size: 1.5rem;
-        padding: 0.5rem 1rem;
-        border-radius: 9999px;
-      }
     </style>
-
   </head>
-  <body class="bg-gray-100 text-gray-800 font-sans">
+
+  <body>
     <!-- Navbar -->
     <nav class="bg-white shadow p-4 d-flex justify-content-between align-items-center">
       <h1 class="h4 fw-bold mb-0">Tuna</h1>
@@ -115,26 +112,36 @@
     <section class="w-100 vh-100 d-flex justify-content-center align-items-center">
       <h1 id="typewriter"></h1>
     </section>
-    <!--Project Carousal -->
-    <section id="projects-carousel" class="py-5 bg-light">
-      <div class="container position-relative">
+
+    <!-- Project Carousel -->
+    <section class="py-5 bg-light">
+      <div class="container">
         <h2 class="h3 text-center mb-4">Latest Projects</h2>
         <div class="my-slider">
-          <!-- JS ile doldurulacak -->
+          <div class="card p-4 mx-3">
+            <h3 class="h5 fw-bold">Project One</h3>
+            <p>Description for project one.</p>
+            <span class="badge tag-pill">CTF</span>
+          </div>
+          <div class="card p-4 mx-3">
+            <h3 class="h5 fw-bold">Project Two</h3>
+            <p>Description for project two.</p>
+            <span class="badge tag-pill">Privilege-Escalation</span>
+          </div>
+          <div class="card p-4 mx-3">
+            <h3 class="h5 fw-bold">Project Three</h3>
+            <p>Description for project three.</p>
+            <span class="badge tag-pill">Web-Exploitation</span>
+          </div>
         </div>
-        <!-- Carousel Butonları -->
-        <button class="carousel-prev btn btn-light shadow position-absolute bottom-0 start-0 m-3">←</button>
-        <button class="carousel-next btn btn-light shadow position-absolute bottom-0 end-0 m-3">→</button>
       </div>
     </section>
 
-
+    <!-- Scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.3/min/tiny-slider.js"></script>
-    <script type="module">
-      import { TAGS, colourOfIndex } from './assets/tags.js';
-
+    <script>
       document.addEventListener("DOMContentLoaded", () => {
-        const text = "Tuna ";
+        const text = "Tuna";
         let idx = 0;
         const el = document.getElementById("typewriter");
         function tick() {
@@ -147,65 +154,25 @@
         }
         tick();
 
-        const sliderContainer = document.querySelector('.my-slider');
-        fetch('./projects.json')
-          .then(res => res.json())
-          .then(list => {
-            list.forEach(p => {
-              const card = document.createElement('div');
-              card.className = 'card shadow-lg rounded-4 overflow-hidden p-4 position-relative mx-3';
-              card.dataset.title = p.title;
-              card.dataset.tags = p.tags.join(',');
-              card.innerHTML = `
-                <a href="${p.url}" class="stretched-link"><span class="visually-hidden">Open ${p.title}</span></a>
-                <h3 class="h5 fw-bold mb-2">${p.title}</h3>
-                <p class="mb-2">${p.description}</p>
-              `;
-
-              const badgeRow = document.createElement('p');
-              badgeRow.className = 'mt-3 tag-badges';
-              p.tags.forEach(id => {
-                const idx = TAGS.findIndex(t => t.id === id);
-                if (idx !== -1) {
-                  const { text, fill } = colourOfIndex(idx);
-                  const span = document.createElement('span');
-                  span.className = 'badge tag-pill me-1';
-                  span.style.color = text;
-                  span.style.background = fill;
-                  span.textContent = TAGS[idx].label;
-                  badgeRow.appendChild(span);
-                }
-              });
-              card.appendChild(badgeRow);
-              sliderContainer.appendChild(card);
-            });
-            initSlider();
-          });
-      });
-
-      function initSlider() {
         tns({
-          container: '.my-slider',
+          container: ".my-slider",
           items: 1,
-          slideBy: 'page',
+          slideBy: "page",
           autoplay: true,
           autoplayTimeout: 5000,
           autoplayButtonOutput: false,
           controls: true,
-          controlsText: ['←', '→'],
+          controlsText: ["←", "→"],
           nav: false,
           gutter: 24,
           speed: 800,
           mouseDrag: true,
-          controlsContainer: null, // Varsayılan kontrolleri kullanma
           responsive: {
             768: { items: 2 },
             1024: { items: 3 }
           }
         });
-
-      }
-
+      });
     </script>
   </body>
 </html>
