--- a/index.html
+++ b/index.html
@@ -114,65 +114,83 @@
     </section>
 
     <!-- Project Carousel -->
-    <section class="py-5 bg-light">
-      <div class="container">
-        <h2 class="h3 text-center mb-4">Latest Projects</h2>
-        <div class="my-slider">
-          <div class="card p-4 mx-3">
-            <h3 class="h5 fw-bold">Project One</h3>
-            <p>Description for project one.</p>
-            <span class="badge tag-pill">CTF</span>
-          </div>
-          <div class="card p-4 mx-3">
-            <h3 class="h5 fw-bold">Project Two</h3>
-            <p>Description for project two.</p>
-            <span class="badge tag-pill">Privilege-Escalation</span>
-          </div>
-          <div class="card p-4 mx-3">
-            <h3 class="h5 fw-bold">Project Three</h3>
-            <p>Description for project three.</p>
-            <span class="badge tag-pill">Web-Exploitation</span>
-          </div>
-        </div>
+<section class="py-5 bg-light">
+  <div class="container position-relative">
+    <h2 class="h3 text-center mb-4">Latest Projects</h2>
+
+    <!-- Slider viewport -->
+    <div class="my-slider tns-outer">
+      <div class="tns-slider">
+        <!-- JS will inject .card slides here -->
       </div>
-    </section>
+    </div>
 
-    <!-- Scripts -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.3/min/tiny-slider.js"></script>
-    <script>
-      document.addEventListener("DOMContentLoaded", () => {
-        const text = "Tuna";
-        let idx = 0;
-        const el = document.getElementById("typewriter");
-        function tick() {
-          if (idx <= text.length) {
-            el.textContent = text.slice(0, idx++);
-            setTimeout(tick, 150);
-          } else {
-            setTimeout(() => { idx = 0; el.textContent = ''; tick(); }, 5000);
-          }
-        }
-        tick();
+    <!-- Prev/Next controls -->
+    <div class="tns-controls">
+      <button data-controls="prev">←</button>
+      <button data-controls="next">→</button>
+    </div>
+  </div>
+</section>
 
-        tns({
-          container: ".my-slider",
-          items: 1,
-          slideBy: "page",
-          autoplay: true,
-          autoplayTimeout: 5000,
-          autoplayButtonOutput: false,
-          controls: true,
-          controlsText: ["←", "→"],
-          nav: false,
-          gutter: 24,
-          speed: 800,
-          mouseDrag: true,
-          responsive: {
-            768: { items: 2 },
-            1024: { items: 3 }
-          }
+<script>
+  document.addEventListener("DOMContentLoaded", () => {
+    const sliderEl = document.querySelector('.my-slider .tns-slider');
+
+    // Fetch real projects.json
+    fetch('/my-website/projects.json')  // ← adjust path if needed
+      .then(res => {
+        if (!res.ok) throw new Error('HTTP ' + res.status);
+        return res.json();
+      })
+      .then(projects => {
+        projects.forEach(p => {
+          const card = document.createElement('div');
+          card.className = 'card p-4 mx-3';
+          card.innerHTML = `
+            <h3 class="h5 fw-bold mb-2">${p.title}</h3>
+            <p class="mb-2">${p.description}</p>
+            ${p.tags.map(t => `<span class="badge tag-pill me-1">${t}</span>`).join('')}
+          `;
+          sliderEl.append(card);
         });
+      })
+      .catch(err => {
+        console.error('Could not load projects.json:', err);
+        // Fallback static slides
+        ['One','Two','Three'].forEach((n,i) => {
+          const card = document.createElement('div');
+          card.className = 'card p-4 mx-3';
+          card.innerHTML = `
+            <h3 class="h5 fw-bold mb-2">Project ${n}</h3>
+            <p>Description for project ${n.toLowerCase()}.</p>
+            <span class="badge tag-pill">Demo</span>
+          `;
+          sliderEl.append(card);
+        });
+      })
+      .finally(initCarousel);
+
+    function initCarousel() {
+      tns({
+        container: '.my-slider .tns-slider',
+        items: 1,
+        slideBy: 'page',
+        autoplay: true,
+        autoplayTimeout: 5000,
+        autoplayButtonOutput: false,
+        controls: true,
+        controlsContainer: '.tns-controls',
+        nav: false,
+        gutter: 24,
+        speed: 600,
+        mouseDrag: true,
+        center: true,               // ← CENTER slides
+        responsive: {
+          768: { items: 2 },
+          1024: { items: 3 }
+        }
       });
-    </script>
-  </body>
-</html>
+    }
+  });
+</script>
