--- a/index.html
+++ b/index.html
@@ -1,181 +1,210 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tuna</title>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Tuna</title>
 
-    <!-- Bubbly font -->
-    <link href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&display=swap" rel="stylesheet" />
+  <!-- Bubbly font -->
+  <link href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&display=swap" rel="stylesheet"/>
 
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+  <!-- Bootstrap (for basic reset + grid) -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"/>
 
-    <!-- Tiny Slider CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.3/tiny-slider.css" />
+  <!-- Tiny Slider CSS -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.3/tiny-slider.css" rel="stylesheet"/>
 
-    <style>
-      body {
-        background-color: #f8f9fa;
-        color: #212529;
-        font-family: sans-serif;
-      }
+  <style>
+    /* ---- Base ---- */
+    body { margin:0; background:#f8f9fa; color:#212529; font-family:system-ui,sans-serif; }
+    h1, h2, h3 { margin:0; }
 
-      #typewriter {
-        font-family: 'Bubblegum Sans', cursive;
-        font-size: 5rem;
-        background: linear-gradient(270deg, #FFC1CC, #B3E5FC, #FFDAB9);
-        background-size: 600% 600%;
-        background-clip: text;
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-        animation: gradientShift 8s ease infinite;
-        white-space: nowrap;
-        text-align: center;
-      }
+    /* ---- Typewriter Hero ---- */
+    #typewriter {
+      font-family:'Bubblegum Sans', cursive;
+      font-size:16rem;
+      background:linear-gradient(270deg,#FFC1CC,#B3E5FC,#FFDAB9);
+      background-size:600% 600%;
+      -webkit-background-clip:text;
+      -webkit-text-fill-color:transparent;
+              background-clip:text;
+              color:transparent;
+      animation:gradientShift 8s ease infinite;
+      white-space:nowrap;
+      text-align:center;
+    }
+    @keyframes gradientShift {
+      0% { background-position:0% 50%; }
+      50% { background-position:100% 50%; }
+      100% { background-position:0% 50%; }
+    }
 
-      @keyframes gradientShift {
-        0% { background-position: 0% 50%; }
-        50% { background-position: 100% 50%; }
-        100% { background-position: 0% 50%; }
-      }
+    /* ---- Badges ---- */
+    .badge.tag-pill {
+      border:1px solid currentColor;
+      border-radius:9999px;
+      padding:.35em .6em;
+      font-weight:500;
+      background:transparent;
+    }
 
-      .badge.tag-pill {
-        border: 1px solid currentColor;
-        border-radius: 9999px;
-        padding: .35em .6em;
-        font-weight: 500;
-        background: transparent;
-      }
+    /* ---- Carousel ---- */
+    .tns-outer {
+      overflow: hidden !important;    /* ensure no half-cards show */
+      margin: 0 auto;      /* center the viewport */
+      max-width: calc(3 * 360px + 2 * 24px); /* 3 cards @360px + 2 gutters @24px */
+    }
 
-      .tns-outer {
-        padding: 0 1rem;
-        position: relative;
-      }
+    .tns-slider {
+      overflow: hidden !important;
+      display: flex !important;
+      justify-content: center;
+    }
 
-      .tns-item {
-        display: flex;
-        justify-content: center;
-      }
+    .tns-item { flex:0 0 auto; display:flex; justify-content:center; }
+    .my-slider .card {
+      max-width:360px;
+      width:100%;
+      border-radius:1rem;
+      box-shadow:0 4px 12px rgba(0,0,0,0.08);
+      transition:transform .2s ease, box-shadow .2s ease;
+    }
+    .my-slider .card:hover {
+      transform:translateY(-4px);
+      box-shadow:0 8px 20px rgba(0,0,0,0.12);
+    }
+    .tns-controls {
+      position:absolute;
+      width:100%;
+      bottom:-2rem;
+      display:flex;
+      justify-content:space-between;
+      padding:0 2rem;
+      pointer-events:none;
+    }
+    .tns-controls button {
+      pointer-events:auto;
+      background:#fff;
+      border:1px solid #ddd;
+      border-radius:9999px;
+      padding:.5rem 1rem;
+      font-size:1.5rem;
+      box-shadow:0 .5rem 1rem rgba(0,0,0,0.05);
+      cursor:pointer;
+      transition:background .3s;
+    }
+    .tns-controls button:hover { background:#f0f0f0; }
+    .carousel-prev,
+    .carousel-next {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      z-index: 10;
+      background: #fff;
+      border-radius: 50%;
+      width: 3rem;
+      height: 3rem;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      box-shadow: 0 0.5rem 1rem rgba(0,0,0,0.05);
+    }
 
-      .my-slider .card {
-        max-width: 360px;
-        border-radius: 1rem;
-        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
-        transition: transform 0.2s ease, box-shadow 0.2s ease;
-      }
+    .carousel-prev {
+      left: 1rem;   /* 1rem from the left edge of the container */
+    }
+    .carousel-next {
+      right: 1rem;  /* 1rem from the right edge of the container */
+    }
+  </style>
+</head>
 
-      .my-slider .card:hover {
-        transform: translateY(-4px);
-        box-shadow: 0 8px 20px rgba(0, 0, 0, 0.12);
-      }
+<body>
 
-      .tns-controls {
-        position: absolute;
-        width: 100%;
-        bottom: -2rem;
-        display: flex;
-        justify-content: space-between;
-        padding: 0 2rem;
-        z-index: 1;
-      }
+  <!-- Navbar -->
+  <nav class="bg-white shadow p-4 d-flex justify-content-between align-items-center">
+    <h1 class="h4 fw-bold mb-0">Tuna</h1>
+    <ul class="d-flex gap-3 list-unstyled mb-0">
+      <li><a href="index.html" class="text-decoration-none">Home</a></li>
+      <li><a href="cv.html" class="text-decoration-none">CV</a></li>
+      <li><a href="projects.html" class="text-decoration-none fw-semibold">Projects</a></li>
+    </ul>
+  </nav>
 
-      .tns-controls button {
-        background-color: #fff;
-        border: 1px solid #ddd;
-        border-radius: 9999px;
-        padding: 0.5rem 1rem;
-        font-size: 1.5rem;
-        cursor: pointer;
-        box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.05);
-        transition: background 0.3s ease;
-      }
+  <!-- Hero with Typewriter -->
+  <section class="w-100 vh-100 d-flex justify-content-center align-items-center">
+    <h1 id="typewriter"></h1>
+  </section>
 
-      .tns-controls button:hover {
-        background-color: #f0f0f0;
-      }
-    </style>
-  </head>
+  <!-- Projects Carousel -->
+  <section class="py-5 bg-light overflow-hidden">
+   <div class="container position-relative overflow-hidden">
+      <h2 class="h3 text-center mb-4">Latest Projects</h2>
 
-  <body>
-    <!-- Navbar -->
-    <nav class="bg-white shadow p-4 d-flex justify-content-between align-items-center">
-      <h1 class="h4 fw-bold mb-0">Tuna</h1>
-      <ul class="d-flex gap-3 list-unstyled mb-0">
-        <li><a href="index.html" class="text-decoration-none">Home</a></li>
-        <li><a href="cv.html" class="text-decoration-none">CV</a></li>
-        <li><a href="projects.html" class="text-decoration-none fw-semibold">Projects</a></li>
-      </ul>
-    </nav>
+      <div class="my-slider tns-outer">
+        <div class="tns-slider"></div>
+      </div>
 
-    <!-- Hero -->
-    <section class="w-100 vh-100 d-flex justify-content-center align-items-center">
-      <h1 id="typewriter"></h1>
-    </section>
-
-    <!-- Project Carousel -->
-<section class="py-5 bg-light">
-  <div class="container position-relative">
-    <h2 class="h3 text-center mb-4">Latest Projects</h2>
-
-    <!-- Slider viewport -->
-    <div class="my-slider tns-outer">
-      <div class="tns-slider">
-        <!-- JS will inject .card slides here -->
+      <div class="tns-controls">
+        <button data-controls="prev">←</button>
+        <button data-controls="next">→</button>
       </div>
     </div>
+  </section>
 
-    <!-- Prev/Next controls -->
-    <div class="tns-controls">
-      <button data-controls="prev">←</button>
-      <button data-controls="next">→</button>
-    </div>
-  </div>
-</section>
+  <!-- Scripts -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.3/min/tiny-slider.js"></script>
+  <script type="module">
+    import { TAGS, colourOfIndex } from './assets/tags.js';
 
-<script>
-  document.addEventListener("DOMContentLoaded", () => {
-    const sliderEl = document.querySelector('.my-slider .tns-slider');
+    document.addEventListener('DOMContentLoaded', () => {
+      // 1) Typewriter
+      const txt = 'Tuna';
+      let i = 0;
+      const el = document.getElementById('typewriter');
+      (function type() {
+        el.textContent = txt.slice(0, i++);
+        if (i <= txt.length) {
+          setTimeout(type, 150);
+        } else {
+          setTimeout(() => { i = 0; type(); }, 5000);
+        }
+      })();
 
-    // Fetch real projects.json
-    fetch('/my-website/projects.json')  // ← adjust path if needed
-      .then(res => {
-        if (!res.ok) throw new Error('HTTP ' + res.status);
-        return res.json();
-      })
-      .then(projects => {
-        projects.forEach(p => {
-          const card = document.createElement('div');
-          card.className = 'card p-4 mx-3';
-          card.innerHTML = `
-            <h3 class="h5 fw-bold mb-2">${p.title}</h3>
-            <p class="mb-2">${p.description}</p>
-            ${p.tags.map(t => `<span class="badge tag-pill me-1">${t}</span>`).join('')}
-          `;
-          sliderEl.append(card);
-        });
-      })
-      .catch(err => {
-        console.error('Could not load projects.json:', err);
-        // Fallback static slides
-        ['One','Two','Three'].forEach((n,i) => {
-          const card = document.createElement('div');
-          card.className = 'card p-4 mx-3';
-          card.innerHTML = `
-            <h3 class="h5 fw-bold mb-2">Project ${n}</h3>
-            <p>Description for project ${n.toLowerCase()}.</p>
-            <span class="badge tag-pill">Demo</span>
-          `;
-          sliderEl.append(card);
-        });
-      })
-      .finally(initCarousel);
+      // 2) Fetch + render slides
+      const sliderEl = document.querySelector('.tns-slider');
+      fetch('/my-website/projects.json')
+        .then(r => { if(!r.ok) throw r; return r.json(); })
+        .then(arr => arr)
+        .catch(() => {
+          console.warn('Using fallback slides');
+          return [
+            { title:'Project One', description:'Fallback slide one.', tags:['Demo'] },
+            { title:'Project Two', description:'Fallback slide two.', tags:['Demo'] },
+            { title:'Project Three', description:'Fallback slide three.', tags:['Demo'] },
+          ];
+        })
+        .then(slides => {
+          slides.forEach(p => {
+            const card = document.createElement('div');
+            card.className = 'card p-4 mx-3';
+            card.innerHTML = `
+              <h3 class="h5 fw-bold mb-2">${p.title}</h3>
+              <p class="mb-2">${p.description}</p>
+              ${p.tags.map(t => `<span class="badge tag-pill me-1">${t}</span>`).join('')}
+            `;
+            sliderEl.append(card);
+          });
+        })
+        .finally(initCarousel);
+    });
 
     function initCarousel() {
       tns({
-        container: '.my-slider .tns-slider',
-        items: 1,
+        container: '.tns-slider',
+        items: 3,
         slideBy: 'page',
+        center: true,
         autoplay: true,
         autoplayTimeout: 5000,
         autoplayButtonOutput: false,
@@ -185,12 +214,12 @@
         gutter: 24,
         speed: 600,
         mouseDrag: true,
-        center: true,               // ← CENTER slides
         responsive: {
           768: { items: 2 },
           1024: { items: 3 }
         }
       });
     }
-  });
-</script>
+  </script>
+</body>
+</html>
