--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
       max-width:360px;
       width:100%;
       border-radius:1rem;
+      padding: 0 1rem;
       box-shadow:0 4px 12px rgba(0,0,0,0.08);
       transition:transform .2s ease, box-shadow .2s ease;
     }
@@ -76,10 +77,10 @@
     .tns-controls {
       position:absolute;
       width:100%;
-      bottom:-2rem;
+      bottom:8rem;
       display:flex;
       justify-content:space-between;
-      padding:0 2rem;
+      padding:0 1rem;
       pointer-events:none;
     }
     .tns-controls button {
@@ -201,24 +202,26 @@
 
     function initCarousel() {
       tns({
-        container: '.tns-slider',
-        items: 3,
-        slideBy: 'page',
-        center: true,
+        container: ".my-slider",
+        items: 1,
+        slideBy: "page",
         autoplay: true,
         autoplayTimeout: 5000,
         autoplayButtonOutput: false,
         controls: true,
-        controlsContainer: '.tns-controls',
+        controlsText: ["←", "→"],
         nav: false,
         gutter: 24,
-        speed: 600,
+        speed: 800,
         mouseDrag: true,
+        edgePadding: 40,    // kenarlarda 40px boşluk bırakır
+        center: true,       // slaytları ortalar
         responsive: {
           768: { items: 2 },
           1024: { items: 3 }
         }
       });
+
     }
   </script>
 </body>
