--- a/cv.html
+++ b/cv.html
@@ -18,14 +18,14 @@
   </head>
   <body class="bg-gray-50 text-gray-800 font-sans min-h-screen flex flex-col">
       <!-- 🧭 Navbar -->
-      <nav class="bg-white shadow p-4 flex justify-between items-center">
-        <h1 class="text-xl font-bold">Tuna</h1>
-        <ul class="flex gap-4">
-          <li><a href="index.html" class="hover:text-blue-500">Home</a></li>
-          <li><a href="cv.html" class="hover:text-blue-500">CV</a></li>
-          <li><a href="projects.html" class="hover: text-blue-600">Projects</a></li>
-        </ul>
-      </nav>
+     <nav class="bg-white shadow p-4 d-flex justify-content-between align-items-center">
+      <h1 class="h4 fw-bold mb-0">Tuna</h1>
+      <ul class="d-flex gap-3 list-unstyled mb-0">
+        <li><a href="index.html" class="text-decoration-none">Home</a></li>
+        <li><a href="cv.html" class="text-decoration-none">CV</a></li>
+        <li><a href="projects.html" class="text-decoration-none fw-semibold">Projects</a></li>
+      </ul>
+    </nav>
     <main class="flex-grow flex justify-center px-4 py-10">
       <article class="w-full max-w-4xl bg-white shadow-lg rounded-2xl p-8 space-y-10">
         <!-- Header -->
