--- a/index.html
+++ b/index.html
@@ -14,110 +14,138 @@
   <!-- Tiny Slider CSS -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.3/tiny-slider.css" rel="stylesheet"/>
 
-  <style>
-    /* ---- Base ---- */
-    body { margin:0; background:#f8f9fa; color:#212529; font-family:system-ui,sans-serif; }
-    h1, h2, h3 { margin:0; }
+ <style>
+/* =========================================================================
+   Base
+   ========================================================================= */
+body {
+  margin: 0;
+  background: #f8f9fa;
+  color: #212529;
+  font-family: system-ui, sans-serif;
+}
+h1, h2, h3 { margin: 0; }
 
-    /* ---- Typewriter Hero ---- */
-    #typewriter {
-      font-family:'Bubblegum Sans', cursive;
-      font-size:16rem;
-      background:linear-gradient(270deg,#FFC1CC,#B3E5FC,#FFDAB9);
-      background-size:600% 600%;
-      -webkit-background-clip:text;
-      -webkit-text-fill-color:transparent;
-              background-clip:text;
-              color:transparent;
-      animation:gradientShift 8s ease infinite;
-      white-space:nowrap;
-      text-align:center;
-    }
-    @keyframes gradientShift {
-      0% { background-position:0% 50%; }
-      50% { background-position:100% 50%; }
-      100% { background-position:0% 50%; }
-    }
+/* =========================================================================
+   Typewriter Hero
+   ========================================================================= */
+#typewriter {
+  font-family: 'Bubblegum Sans', cursive;
+  font-size: 16rem;
+  background: linear-gradient(270deg, #FFC1CC, #B3E5FC, #FFDAB9);
+  background-size: 600% 600%;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+          background-clip: text;
+          color: transparent;
+  animation: gradientShift 8s ease infinite;
+  white-space: nowrap;
+  text-align: center;
+}
+@keyframes gradientShift {
+  0%   { background-position: 0%   50%; }
+  50%  { background-position: 100% 50%; }
+  100% { background-position: 0%   50%; }
+}
 
-    /* ---- Badges ---- */
-    .badge.tag-pill {
-      border:1px solid currentColor;
-      border-radius:9999px;
-      padding:.35em .6em;
-      font-weight:500;
-      background:transparent;
-    }
+/* =========================================================================
+   Badges
+   ========================================================================= */
+.badge.tag-pill {
+  border: 1px solid currentColor;
+  border-radius: 9999px;
+  padding: .35em .6em;
+  font-weight: 500;
+  background: transparent;
+}
 
-    /* ---- Carousel ---- */
-    .tns-outer {
-      overflow: hidden !important;    /* ensure no half-cards show */
-      margin: 0 auto;      /* center the viewport */
-      max-width: calc(3 * 360px + 2 * 24px); /* 3 cards @360px + 2 gutters @24px */
-    }
+/* =========================================================================
+   Projects Carousel (Tiny-Slider)
+   ========================================================================= */
+.tns-outer {
+  margin: 0 auto;                                   /* center viewport */
+  max-width: calc(3 * 360px + 2 * 24px);            /* 3 cards + 2 gutters */
+}
 
-    .tns-slider {
-      overflow: hidden !important;
-      display: flex !important;
-      justify-content: center;
-    }
+.tns-slider {
+  display: flex !important;
+  justify-content: center;
+}
 
-    .tns-item { flex:0 0 auto; display:flex; justify-content:center; }
-    .my-slider .card {
-      max-width:360px;
-      width:100%;
-      border-radius:1rem;
-      padding: 0 1rem;
-      box-shadow:0 4px 12px rgba(0,0,0,0.08);
-      transition:transform .2s ease, box-shadow .2s ease;
-    }
-    .my-slider .card:hover {
-      transform:translateY(-4px);
-      box-shadow:0 8px 20px rgba(0,0,0,0.12);
-    }
-    .tns-controls {
-      position:absolute;
-      width:100%;
-      bottom:8rem;
-      display:flex;
-      justify-content:space-between;
-      padding:0 1rem;
-      pointer-events:none;
-    }
-    .tns-controls button {
-      pointer-events:auto;
-      background:#fff;
-      border:1px solid #ddd;
-      border-radius:9999px;
-      padding:.5rem 1rem;
-      font-size:1.5rem;
-      box-shadow:0 .5rem 1rem rgba(0,0,0,0.05);
-      cursor:pointer;
-      transition:background .3s;
-    }
-    .tns-controls button:hover { background:#f0f0f0; }
-    .carousel-prev,
-    .carousel-next {
-      position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
-      z-index: 10;
-      background: #fff;
-      border-radius: 50%;
-      width: 3rem;
-      height: 3rem;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      box-shadow: 0 0.5rem 1rem rgba(0,0,0,0.05);
-    }
+.tns-item {
+  flex: 0 0 auto;
+  display: flex;
+  justify-content: center;
+}
 
-    .carousel-prev {
-      left: 1rem;   /* 1rem from the left edge of the container */
-    }
-    .carousel-next {
-      right: 1rem;  /* 1rem from the right edge of the container */
-    }
-  </style>
+/* ---- Project Card ---- */
+.my-slider .card {
+  max-width: 360px;
+  width: 100%;
+  border-radius: 1rem;
+  padding: 0 1rem;
+  box-shadow: 0 4px 12px rgba(0,0,0,.08);
+  transition: transform .2s ease, box-shadow .2s ease;
+}
+.my-slider .card:hover {
+  transform: translateY(-4px) scale(1.03);
+  box-shadow: 0 8px 20px rgba(0,0,0,.12);
+  z-index: 5;                                       /* stay on top */
+}
+
+/* ---- Fix: allow hovered cards to overflow slider wrappers ---- */
+.tns-ovh,
+.tns-inner,
+.tns-slider,
+.tns-outer,
+.my-slider .tns-item {
+  overflow: visible !important;
+}
+
+/* ---- Carousel Controls ---- */
+.tns-controls {
+  position: absolute;
+  width: 100%;
+  bottom: 8rem;
+  display: flex;
+  justify-content: space-between;
+  padding: 0 1rem;
+  pointer-events: none;                             /* allow slides to capture drag */
+}
+
+.tns-controls button {
+  pointer-events: auto;
+  background: #fff;
+  border: 1px solid #ddd;
+  border-radius: 9999px;
+  padding: .5rem 1rem;
+  font-size: 1.5rem;
+  box-shadow: 0 .5rem 1rem rgba(0,0,0,.05);
+  cursor: pointer;
+  transition: background .3s;
+}
+.tns-controls button:hover { background: #f0f0f0; }
+
+/* ---- Optional “circle” arrows (if you keep them) ---- */
+.carousel-prev,
+.carousel-next {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 10;
+  background: #fff;
+  border-radius: 50%;
+  width: 3rem;
+  height: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 .5rem 1rem rgba(0,0,0,.05);
+}
+.carousel-prev  { left:  1rem; }
+.carousel-next  { right: 1rem; }
+</style>
+
 </head>
 
 <body>
