--- a/cv.html
+++ b/cv.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
     <link href="style.css" rel="stylesheet" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+    <link href="style.css" rel="stylesheet">
+
+
     <style>
       .badge.tag-pill{
         border:1px solid currentColor;
@@ -17,8 +23,8 @@
     <title>Tuna Gökgöz | CV</title>
   </head>
   <body class="bg-gray-50 text-gray-800 font-sans min-h-screen flex flex-col">
-      <!-- 🧭 Navbar -->
-     <nav class="bg-white shadow p-4 d-flex justify-content-between align-items-center">
+  <!-- Navbar -->
+    <nav class="bg-white shadow p-4 d-flex justify-content-between align-items-center">
       <h1 class="h4 fw-bold mb-0">Tuna</h1>
       <ul class="d-flex gap-3 list-unstyled mb-0">
         <li><a href="index.html" class="text-decoration-none">Home</a></li>
@@ -26,6 +32,7 @@
         <li><a href="projects.html" class="text-decoration-none fw-semibold">Projects</a></li>
       </ul>
     </nav>
+
     <main class="flex-grow flex justify-center px-4 py-10">
       <article class="w-full max-w-4xl bg-white shadow-lg rounded-2xl p-8 space-y-10">
         <!-- Header -->
