--- a/index.html
+++ b/index.html
@@ -41,11 +41,184 @@ h1, h2, h3 { margin: 0; }
   animation: gradientShift 8s ease infinite;
   white-space: nowrap;
   text-align: center;
+
+  /* ADDED: baloncukların üstünde kalsın */
+  position: relative;
+  z-index: 1;
 }
 @keyframes gradientShift {
   0%   { background-position: 0%   50%; }
   50%  { background-position: 100% 50%; }
   100% { background-position: 0%   50%; }
+}
+
+/* =========================================================================
+   Flu-Blur Blob Behind Typewriter
+   ========================================================================= */
+.hero {
+  position: relative;
+  overflow: hidden;
+  isolation: isolate; /* prevents mixing with other z-layers */
+}
+
+.hero::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%) rotate(25deg);
+  width: 650px;
+  height: 450px;
+  background: radial-gradient(circle at 30% 30%,
+              rgba(255,200,200,.45) 0%,
+              rgba(255,230,230,.25) 35%,
+              rgba(255,255,255,0) 70%);
+  filter: blur(120px);
+  opacity: .5; /* daha hafif */
+  border-radius: 45% 55% 60% 40% / 60% 40% 55% 45%;
+  z-index: -1;
+  animation: blob 18s ease-in-out infinite alternate;
+}
+@keyframes blob {
+  0%  { transform: translate(-50%,-50%) scale(1)   rotate(25deg); }
+  50% { transform: translate(-48%,-52%) scale(1.15) rotate(40deg); }
+  100%{ transform: translate(-45%,-55%) scale(1.3)  rotate(60deg); }
+}
+
+/* =========================================================================
+   Soap Bubbles (ADDED)
+   ========================================================================= */
+.bubble-layer{
+  position: absolute;
+  inset: 0;
+  overflow: hidden;
+  pointer-events: none;
+  z-index: 0; /* hero::before -1, yazı 1 */
+}
+
+/* Sabun köpüğü baloncuk */
+.bubble{
+  position: absolute;
+  bottom: -12vh;                 /* ekran altından başlasın */
+  left: var(--x, 50%);
+  width: var(--size, 28px);
+  height: var(--size, 28px);
+  transform: translateX(-50%) translateY(0) scale(1) rotate(var(--rot,0deg));
+  border-radius: 50%;
+
+  /* iç taraf: ince film + iç parlama */
+  background:
+    radial-gradient(circle at 35% 30%,
+      rgba(255,255,255,.75) 0 10%,
+      rgba(255,255,255,.15) 25%,
+      rgba(255,255,255,0) 55%),
+    radial-gradient(circle at 70% 75%,
+      rgba(255,255,255,.25) 0 8%,
+      rgba(255,255,255,0) 22%);
+  /* sabun köpüğü gökkuşağı kenar: conic gradient ile border-image */
+  border: 2px solid transparent;
+  border-image: conic-gradient(
+      from var(--hue,0deg),
+      #ff6ec7, #ffd166, #8aff80, #4cc9f0, #9b5de5, #ff6ec7
+  ) 1;
+
+  /* cam/ince film hissi */
+  box-shadow:
+    inset 0 0 18px rgba(255,255,255,.12),
+    0 4px 18px rgba(76,201,240,.12);
+  opacity: var(--op, .55);
+  filter: saturate(120%) contrast(108%) brightness(104%);
+  mix-blend-mode: screen;              /* arka planla güzel karışsın */
+
+  animation:
+    bubble-rise var(--dur,14s) linear var(--delay,0s) infinite,
+    bubble-spin var(--spin,18s) linear var(--spinDelay,0s) infinite;
+}
+
+/* üstte ek parlaklık lekesi */
+.bubble::after{
+  content:"";
+  position:absolute; inset:0;
+  border-radius:inherit;
+  background:
+    radial-gradient(circle at 28% 22%, rgba(255,255,255,.85) 0 9%, rgba(255,255,255,0) 18%),
+    radial-gradient(circle at 62% 68%, rgba(255,255,255,.22) 0 7%, rgba(255,255,255,0) 20%);
+  pointer-events:none;
+}
+/* === Geometrik şekiller (circle, square, triangle) === */
+.geo{
+  position:absolute;
+  bottom:-14vh;
+  left:var(--x,50%);
+  width:var(--size,32px);
+  height:var(--size,32px);
+  opacity:var(--op,.4);
+  transform: translateX(-50%) translateY(0) rotate(var(--rot,0deg));
+  animation: float-rise var(--dur,16s) linear var(--delay,0s) infinite;
+  filter: saturate(120%) brightness(105%);
+  mix-blend-mode: screen; /* arka planla güzel karışır */
+}
+
+/* Daire */
+.geo.circle{
+  border-radius:50%;
+  background:
+    radial-gradient(circle at 35% 30%, rgba(255,255,255,.8) 0 12%, rgba(255,255,255,.12) 55%, rgba(255,255,255,0) 70%);
+  border:2px solid transparent;
+  border-image: conic-gradient(from var(--hue,0deg),
+    #ff6ec7,#ffd166,#8aff80,#4cc9f0,#9b5de5,#ff6ec7) 1;
+}
+
+/* Kare */
+.geo.square{
+  border-radius:12%;
+  background: conic-gradient(from var(--hue,0deg),
+    rgba(255,110,199,.45),
+    rgba(255,209,102,.45),
+    rgba(138,255,128,.45),
+    rgba(76,201,240,.45),
+    rgba(155,93,229,.45),
+    rgba(255,110,199,.45));
+  box-shadow:
+    inset 0 0 14px rgba(255,255,255,.14),
+    0 4px 14px rgba(76,201,240,.10);
+  outline:1px solid rgba(255,255,255,.25);
+}
+
+/* Üçgen */
+.geo.triangle{
+  width: calc(var(--size,32px) * 1.15);
+  height: calc(var(--size,32px) * 1.15);
+  background: conic-gradient(from var(--hue,0deg),
+    rgba(255,110,199,.5),
+    rgba(255,209,102,.5),
+    rgba(76,201,240,.5),
+    rgba(155,93,229,.5),
+    rgba(255,110,199,.5));
+  clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+  box-shadow:
+    inset 0 0 10px rgba(255,255,255,.12),
+    0 4px 14px rgba(0,0,0,.06);
+}
+
+@keyframes float-rise{
+  0%   { transform: translateX(calc(-50% + 0px))  translateY(0)        rotate(var(--rot,0deg)); }
+  50%  { transform: translateX(calc(-50% + 16px)) translateY(-60vh)    rotate(calc(var(--rot,0deg) + 90deg)); }
+  100% { transform: translateX(calc(-50% - 12px)) translateY(-120vh)   rotate(calc(var(--rot,0deg) + 180deg)); }
+}
+
+
+/* yukarı çıkış + hafif sağ-sol salınım */
+@keyframes bubble-rise{
+  0%   { transform: translateX(calc(-50% + 0px))   translateY(0)       scale(1)   rotate(var(--rot,0deg)); }
+  50%  { transform: translateX(calc(-50% + 16px))  translateY(-60vh)   scale(1.05) rotate(calc(var(--rot,0deg) + 90deg)); }
+  100% { transform: translateX(calc(-50% - 12px))  translateY(-120vh)  scale(1.1)  rotate(calc(var(--rot,0deg) + 180deg)); }
+}
+
+/* konik (gökkuşağı) kenarı hafif döndürerek canlılık kat */
+@keyframes bubble-spin{
+  0%   { --hue: 0deg; }
+  100% { --hue: 360deg; }
 }
 
 /* =========================================================================
@@ -66,18 +239,15 @@ h1, h2, h3 { margin: 0; }
   margin: 0 auto;                                   /* center viewport */
   max-width: calc(3 * 360px + 2 * 24px);            /* 3 cards + 2 gutters */
 }
-
 .tns-slider {
   display: flex !important;
   justify-content: center;
 }
-
 .tns-item {
   flex: 0 0 auto;
   display: flex;
   justify-content: center;
 }
-
 /* ---- Project Card ---- */
 .my-slider .card {
   max-width: 360px;
@@ -90,9 +260,8 @@ h1, h2, h3 { margin: 0; }
 .my-slider .card:hover {
   transform: translateY(-4px) scale(1.03);
   box-shadow: 0 8px 20px rgba(0,0,0,.12);
-  z-index: 5;                                       /* stay on top */
+  z-index: 5;
 }
-
 /* ---- Fix: allow hovered cards to overflow slider wrappers ---- */
 .tns-ovh,
 .tns-inner,
@@ -101,7 +270,6 @@ h1, h2, h3 { margin: 0; }
 .my-slider .tns-item {
   overflow: visible !important;
 }
-
 /* ---- Carousel Controls ---- */
 .tns-controls {
   position: absolute;
@@ -110,9 +278,8 @@ h1, h2, h3 { margin: 0; }
   display: flex;
   justify-content: space-between;
   padding: 0 1rem;
-  pointer-events: none;                             /* allow slides to capture drag */
+  pointer-events: none;
 }
-
 .tns-controls button {
   pointer-events: auto;
   background: #fff;
@@ -125,8 +292,6 @@ h1, h2, h3 { margin: 0; }
   transition: background .3s;
 }
 .tns-controls button:hover { background: #f0f0f0; }
-
-/* ---- Optional “circle” arrows (if you keep them) ---- */
 .carousel-prev,
 .carousel-next {
   position: absolute;
@@ -147,9 +312,7 @@ h1, h2, h3 { margin: 0; }
 </style>
 
 </head>
-
 <body>
-
   <!-- Navbar -->
   <nav class="bg-white shadow p-4 d-flex justify-content-between align-items-center">
     <h1 class="h4 fw-bold mb-0">Tuna</h1>
@@ -161,7 +324,9 @@ h1, h2, h3 { margin: 0; }
   </nav>
 
   <!-- Hero with Typewriter -->
-  <section class="w-100 vh-100 d-flex justify-content-center align-items-center">
+  <section class="hero w-100 vh-100 d-flex justify-content-center align-items-center">
+    <!-- ADDED: sabun köpüğü katmanı -->
+    <div class="bubble-layer" aria-hidden="true"></div>
     <h1 id="typewriter"></h1>
   </section>
 
@@ -169,11 +334,9 @@ h1, h2, h3 { margin: 0; }
   <section class="py-5 bg-light">
    <div class="container position-relative">
       <h2 class="h3 text-center mb-4">Latest Projects</h2>
-
       <div class="my-slider tns-outer">
         <div class="tns-slider"></div>
       </div>
-
       <div class="tns-controls">
         <button data-controls="prev">←</button>
         <button data-controls="next">→</button>
@@ -187,7 +350,7 @@ h1, h2, h3 { margin: 0; }
     import { TAGS, colourOfIndex } from './assets/tags.js';
 
     document.addEventListener('DOMContentLoaded', () => {
-      // 1) Typewriter
+      // Typewriter
       const txt = 'Tuna';
       let i = 0;
       const el = document.getElementById('typewriter');
@@ -200,7 +363,75 @@ h1, h2, h3 { margin: 0; }
         }
       })();
 
-      // 2) Fetch + render slides
+      // ADDED: Soap Bubbles
+      const layer = document.querySelector('.bubble-layer');
+      if (layer){
+        const isMobile = window.matchMedia('(max-width: 576px)').matches;
+        const BUBBLE_COUNT = isMobile ? 14 : 26;
+
+        for (let i = 0; i < BUBBLE_COUNT; i++){
+          const b = document.createElement('span');
+          b.className = 'bubble';
+
+          // Rastgeleler
+          const size   = Math.round(Math.random()*26 + 22);          // 22px - 48px
+          const left   = (Math.random()*100).toFixed(2) + '%';       // 0% - 100%
+          const dur    = (Math.random()*8 + 12).toFixed(2) + 's';    // 12s - 20s
+          const delay  = (Math.random()*-20).toFixed(2) + 's';       // yayılı başlangıç
+          const spin   = (Math.random()*12 + 14).toFixed(2) + 's';   // 14s - 26s
+          const spinD  = (Math.random()*-10).toFixed(2) + 's';
+          const op     = (Math.random()*0.35 + 0.35).toFixed(2);     // .35 - .70
+          const rot0   = Math.round(Math.random()*180) + 'deg';      // başlangıç rot.
+          const hue0   = Math.round(Math.random()*360) + 'deg';      // başlangıç hue
+
+          b.style.setProperty('--size',      size + 'px');
+          b.style.setProperty('--x',         left);
+          b.style.setProperty('--dur',       dur);
+          b.style.setProperty('--delay',     delay);
+          b.style.setProperty('--spin',      spin);
+          b.style.setProperty('--spinDelay', spinD);
+          b.style.setProperty('--op',        op);
+          b.style.setProperty('--rot',       rot0);
+          b.style.setProperty('--hue',       hue0);
+
+          layer.appendChild(b);
+        }
+      }
+            // --- Geometrik Şekiller (circle, square, triangle) ---
+      const shapeLayer = document.querySelector('.bubble-layer'); // aynı katmana bırakıyoruz
+      if (shapeLayer){
+        const isMobile = window.matchMedia('(max-width: 576px)').matches;
+        const SHAPE_COUNT = isMobile ? 8 : 14;          // istersen artır/azalt
+        const TYPES = ['circle','square','triangle'];
+
+        for(let i=0;i<SHAPE_COUNT;i++){
+          const s = document.createElement('span');
+          const type = TYPES[Math.floor(Math.random()*TYPES.length)];
+          s.className = `geo ${type}`;
+
+          // rastgele özellikler
+          const size   = Math.round(Math.random()*28 + 24);       // 24px - 52px
+          const left   = (Math.random()*100).toFixed(2) + '%';
+          const dur    = (Math.random()*8 + 14).toFixed(2) + 's'; // 14s - 22s
+          const delay  = (Math.random()*-20).toFixed(2) + 's';
+          const op     = (Math.random()*0.25 + 0.25).toFixed(2);  // .25 - .50
+          const rot0   = Math.round(Math.random()*180) + 'deg';
+          const hue0   = Math.round(Math.random()*360) + 'deg';
+
+          s.style.setProperty('--size',  size + 'px');
+          s.style.setProperty('--x',     left);
+          s.style.setProperty('--dur',   dur);
+          s.style.setProperty('--delay', delay);
+          s.style.setProperty('--op',    op);
+          s.style.setProperty('--rot',   rot0);
+          s.style.setProperty('--hue',   hue0);
+
+          shapeLayer.appendChild(s);
+        }
+      }
+
+
+      // Fetch + render slides
       const sliderEl = document.querySelector('.tns-slider');
       fetch('/my-website/projects.json')
         .then(r => { if(!r.ok) throw r; return r.json(); })
@@ -242,14 +473,13 @@ h1, h2, h3 { margin: 0; }
         gutter: 24,
         speed: 800,
         mouseDrag: true,
-        edgePadding:0,    // kenarlarda 40px boşluk bırakır
-        center: false,       // slaytları ortalar
+        edgePadding: 0,
+        center: false,
         responsive: {
-          768: { items: 2 },
+          768:  { items: 2 },
           1024: { items: 3 }
         }
       });
-
     }
   </script>
 </body>
