home page spotify embedded

--- a/index.html
+++ b/index.html
@@ -343,6 +343,21 @@ h1, h2, h3 { margin: 0; }
       </div>
     </div>
   </section>
+  
+   <!-- SPOTİFY WİDGET -->
+  <section class="py-5">
+    <div class="col-12 col-md-6 col-lg-5">
+     <div class="card shadow-sm" style="border-radius:16px; overflow:hidden; max-width:480px;margin-left: 144px;">
+        <!-- PLAYLIST/ALBÜM/PODCAST için 352px, TRACK için 152px -->
+        <iframe
+          src="https://open.spotify.com/embed/playlist/0ax2IbESDGp2ZVeu3lKPXg?utm_source=generator"
+          style="border:0; width:100%; height:352px;"
+          loading="lazy"
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
+        </iframe>
+      </div>
+    </div>
+  </section>
 
   <!-- Scripts -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.3/min/tiny-slider.js"></script>
