--- a/index.html
+++ b/index.html
@@ -312,6 +312,10 @@ h1, h2, h3 { margin: 0; }
 .carousel-prev  { left:  1rem; }
 .carousel-next  { right: 1rem; }
 </style>
+<!-- Dark/Light Mode -->
+<link rel="stylesheet" href="/assets/theme.css">
+<script defer src="/assets/theme.js"></script>
+<meta name="color-scheme" content="light dark"> 
 
 </head>
 <body>
