--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@ h1, h2, h3 { margin: 0; }
 .carousel-next  { right: 1rem; }
 </style>
 <!-- Dark/Light Mode -->
-<link rel="stylesheet" href="/assets/theme.css">
+<link rel="stylesheet" href="assets/theme.css">
 <script defer src="/assets/theme.js"></script>
 <meta name="color-scheme" content="light dark"> 
 
