--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@ h1, h2, h3 { margin: 0; }
 </style>
 <!-- Dark/Light Mode -->
 <link rel="stylesheet" href="assets/theme.css">
-<script defer src="/assets/theme.js"></script>
+<script defer src="assets/theme.js"></script>
 <meta name="color-scheme" content="light dark"> 
 
 </head>
